--- a/report/appendix/hyperparameter_tuning.tex
+++ b/report/appendix/hyperparameter_tuning.tex
@@ -3,3 +3,5 @@
 For the five implemented \acrlong{drl} algorithms, the following table summarises the hyper-parameters that were tuned during the training process.
 
 \input{tables/hyperparameter_tuning.tex}
+
+\input{tables/default_hyperparameters.tex}
