--- a/report/tables/default_hyperparameters.tex
+++ b/report/tables/default_hyperparameters.tex
@@ -39,5 +39,5 @@
     & Buffer size & 500000 \\ 
     & Learning rate & 0.001 \\ 
     & Learning starts & 2000 \\ 
-    & Entropy coefficient & "auto\_0.1" \\ \hline
+    & Entropy coefficient & auto\_0.1 \\ \hline
 \end{longtable}
