--- a/report/tables/experiment_algorithms_dow30.tex
+++ b/report/tables/experiment_algorithms_dow30.tex
@@ -17,7 +17,7 @@
     \textbf{PPO} & 0.1895 & 0.2937 & 0.1487 & 1.2407 & -0.1556 \\ \hline
     \textbf{DDPG} & \textcolor{blue}{0.2341} & 0.3663 & 0.1486 & \textcolor{blue}{1.4896} & -0.1546 \\ \hline
     \textbf{TD3} & 0.2214 & 0.3456 & 0.1517 & 1.3938 & -0.1609 \\ \hline
-    \textbf{SAC} & 0.2050 & 0.3189 & 0.1480 & 1.3340 & -0.1538 \\ \hline
+    \textbf{SAC} & 0.2050 & 0.3189 & 0.1480 & 1.3340 & -0.1538 \\ \midrule
     \textbf{Mean} & 0.3218 & 0.5114 & 0.1839 & 1.6096 & -0.1983 \\ \hline
     \textbf{Min} & 0.1123 & 0.1705 & 0.1157 & 0.9777 & -0.1066 \\ \hline
     \textbf{Momentum} & \textcolor{green}{0.3855} & 0.6204 & 0.1990 & \textcolor{green}{1.7388} & -0.1929 \\ \hline
